--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "@testing-library/react-native": "^12.7.2",
+    "@types/jest": "^29.5.13",
     "graphql": "^16.9.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
